// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Address: Addresses used by customers for orders
Customer: Stores details of customers
Brand: Brands of products
Cart: Shopping cart details for customers
CartItem: Items within a shopping cart
Product: Stores details of men's golf shoes
Category: Product categories
Order: Represents an order placed by a customer
Payment: Payment records for orders
OrderDetail: Details of products ordered in an order
Promotion: Promotional offers on products
Review: Customer reviews and ratings for products
'''
}

Table Address {
    id INTEGER [primary key]
    customer_id INTEGER 
    street VARCHAR 
    city VARCHAR 
    state VARCHAR 
    postal_code VARCHAR 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Brand {
    id INTEGER [primary key]
    name VARCHAR 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Cart {
    id INTEGER [primary key]
    customer_id INTEGER 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table CartItem {
    id INTEGER [primary key]
    cart_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    stock_quantity INTEGER 
    category_id INTEGER 
    brand_id INTEGER 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    total_amount FLOAT 
    status VARCHAR 
    payment_id INTEGER 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount_paid FLOAT 
    payment_date DATETIME 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table OrderDetail {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    amount FLOAT 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Promotion {
    id INTEGER [primary key]
    product_id INTEGER 
    discount_percentage FLOAT 
    start_date DATETIME 
    end_date DATETIME 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }

Table Review {
    id INTEGER [primary key]
    product_id INTEGER 
    customer_id INTEGER 
    rating INTEGER 
    comment VARCHAR 
    created_date DATETIME 
    created_by VARCHAR 
    updated_date DATETIME 
    }



// Relationships
    Ref: Address.(customer_id) < Customer.(id)
    Ref: Cart.(customer_id) < Customer.(id)
    Ref: CartItem.(cart_id) < Cart.(id)
    Ref: CartItem.(product_id) < Product.(id)
    Ref: Product.(brand_id) < Brand.(id)
    Ref: Product.(category_id) < Category.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: Order.(payment_id) < Payment.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: OrderDetail.(order_id) < Order.(id)
    Ref: OrderDetail.(product_id) < Product.(id)
    Ref: Promotion.(product_id) < Product.(id)
    Ref: Review.(customer_id) < Customer.(id)
    Ref: Review.(product_id) < Product.(id)
